remove imports + fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,12 +12,14 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* removed dark mode layout */
+/* prefers-color-scheme: dark */
+/* @media () {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
